--- a/app/src/main/res/values-fr/help.xml
+++ b/app/src/main/res/values-fr/help.xml
@@ -28,9 +28,10 @@
         Le mot de passe permet de sécuriser les données de votre portefeuille sur votre appareil.
         Utilisez un mot de passe fort - mieux, utilisez une phrase secrète.</p>
         <p>Entrez votre phrase Mnémonique dans le champ \"Phrase Mnémonique\".<p>
-        <p>Si vous connaissez le numéro du bloc de votre première transaction à cette adresse, entrez-le dans le
-        champ \"Hauteur de restauration\" - en le laissant vide la <em>totalité</em> de la chaîne de blocs sera scannée
-        à la recherche des transactions appartenant à votre adresse. Cela prend <em>beaucoup</em> de temps.</p>
+        <p>Entrez le numéro du bloc de la première transaction utilisée pour cette adresse dans le
+        champ \"Hauteur de restauration\". Vous pouvez également utiliser une date au format AAA-MM-JJ.
+        Si vous n'êtes pas sûr, entrer une date / hauteur de block approximative <em>avant</em> que vous
+        n’ayez utilisé cette adresse de portefeuille pour la première fois.</p>
     ]]></string>
 
     <string name="help_create_keys"><![CDATA[
@@ -40,9 +41,10 @@
         Le mot de passe permet de sécuriser les données de votre portefeuille sur votre appareil.
         Utilisez un mot de passe fort - mieux, utilisez une phrase secrète.<p>
         <p>Entrez votre adresse Monero dans le champ \"Adresse Publique\" et remplissez \"Clef d’Audit\" et \"Clef de dépense\".</p>
-        <p>Si vous connaissez le numéro du bloc de votre première transaction à cette adresse, entrez-le dans le
-        champ \"Hauteur de restauration\" - en le laissant vide la <em>totalité</em> de la chaîne de blocs sera scannée
-        à la recherche des transactions appartenant à votre adresse. Cela prend <em>beaucoup</em> de temps.</p>
+        <p>Entrez le numéro du bloc de la première transaction utilisée pour cette adresse dans le
+        champ \"Hauteur de restauration\". Vous pouvez également utiliser une date au format AAA-MM-JJ.
+        Si vous n'êtes pas sûr, entrer une date / hauteur de block approximative <em>avant</em> que vous
+        n’ayez utilisé cette adresse de portefeuille pour la première fois.</p>
     ]]></string>
 
     <string name="help_create_view"><![CDATA[
@@ -52,9 +54,10 @@
         Le mot de passe permet de sécuriser les données de votre portefeuille sur votre appareil.
         Utilisez un mot de passe fort - mieux, utilisez une phrase secrète.<p>
         <p>Entrez votre adresse Monero dans le champ \"Adresse Publique\" et remplissez la \"Clef d’Audit\".</p>
-        <p>Si vous connaissez le numéro du bloc de votre première transaction à cette adresse, entrez-le dans le
-        champ \"Hauteur de restauration\" - en le laissant vide la <em>totalité</em> de la chaîne de blocs sera scannée
-        à la recherche des transactions appartenant à votre adresse. Cela prend <em>beaucoup</em> de temps.</p>
+        <p>Entrez le numéro du bloc de la première transaction utilisée pour cette adresse dans le
+        champ \"Hauteur de restauration\". Vous pouvez également utiliser une date au format AAA-MM-JJ.
+        Si vous n'êtes pas sûr, entrer une date / hauteur de block approximative <em>avant</em> que vous
+        n’ayez utilisé cette adresse de portefeuille pour la première fois.</p>
     ]]></string>
 
     <string name="help_details"><![CDATA[
@@ -245,14 +248,16 @@
     ]]></string>
 
     <string name="help_create_ledger"><![CDATA[
-        <h1>Create Wallet - Ledger</h1>
-        <p>You want to recover your wallet from your Ledger Nano S device.</p>
-        <p>Your secret keys never leave the Ledger device, so you need it plugged in every
-        time you want to access your wallet.</p>
-        <p>Enter a unique wallet name and password. The password is used for securing your wallet data on the Android
-        device. Use a strong password - even better use a passphrase.</p>
-        <p>Enter the block number of the first transaction used for this address in the
-        field \"Restore Height\". You can also use a date in the format YYYY-MM-DD. If you are not sure,
-        enter an approximate date/blockheight <em>before</em> you first used this wallet address.</p>
+        <h1>Créer un Portefeuille - Ledger</h1>
+        <p>Vous voulez restaurer votre portefeuille depuis votre Ledger Nano S.</p>
+        <p>Vos clefs privées ne quittent jamais votre Ledger, donc vous devrez le connecter
+        à chaque fois que vous voudrez accéder à votre portefeuille.</p>
+        <p>Entrez un nom de portefeuille unique et un mot de passe. Le mot de passe est utilisé pour
+        sécuriser les données de votre portefeuille sur votre appareil Android. Utilisez un mot de passe
+        fort, ou mieux, utilisez une phrase de sécurité.</p>
+        <p>Entrez le numéro du bloc de la première transaction utilisée pour cette adresse dans le
+        champ \"Hauteur de restauration\". Vous pouvez également utiliser une date au format AAA-MM-JJ.
+        Si vous n'êtes pas sûr, entrer une date / hauteur de block approximative <em>avant</em> que vous
+        n’ayez utilisé cette adresse de portefeuille pour la première fois.</p>
     ]]></string>
 </resources>
