--- a/app/src/main/res/values-zh-rTW/help.xml
+++ b/app/src/main/res/values-zh-rTW/help.xml
@@ -189,7 +189,7 @@
     <string name="help_create_ledger"><![CDATA[
         <h1>建立 Ledger 錢包</h1>
         <p>如果你想從 Ledger Nano S 回復你的錢包！</p>
-        <p>你的密鑰從未離開過 Ledger 裝置，所以當你要存取錢包時，就必須連接它。</p>
+        <p>你的私鑰永遠不會離開 Ledger 裝置，所以當你要存取錢包時，就必須連接它。</p>
         <p>請輸入獨一無二的錢包名稱與錢包密碼。這個密碼是用來保護你在這個裝置上的錢包資料，請使用足夠強度的密碼。</p>
         <p>請在欄位\"回復高度\"輸入這個地址第一筆交易發生的區塊高度。你也可以依照 YYYY-MM-DD
         格式輸入日期。如果你不是很確定，可以輸入這個錢包地址第一次使用<em>之前</em>的區塊高度或日期。</p>
