Unify the space between english and zh character.

--- a/app/src/main/res/values-zh-rTW/help.xml
+++ b/app/src/main/res/values-zh-rTW/help.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="help_create_new"><![CDATA[
         <h1>建立全新的錢包</h1>
-        <p>如果你需要一個新的Monero錢包地址!</p>
+        <p>如果你需要一個新的 Monero 錢包地址!</p>
         <p>請輸入一個獨特的錢包名稱與錢包密碼。
         這個密碼是用來保護你在這個裝置上的錢包資料，請使用足夠強度的密碼。</p>
         <h2>請抄寫你的記憶種子碼!</h2>
@@ -31,7 +31,7 @@
         <p>如果你已經有一個錢包地址並想要用金鑰上回復它!</p>
         <p>請輸入不得重複的錢包名稱與錢包密碼。
         這個密碼是用來保護你在這個裝置上的錢包資料，請使用足夠強度的密碼。</p>
-        <p>在欄位\"公開地址\"中輸入你的Monero地址並填妥\"查看金鑰\"與\"花費金鑰\"。</p>
+        <p>在欄位\"公開地址\"中輸入你的 Monero 地址並填妥\"查看金鑰\"與\"花費金鑰\"。</p>
         <p>請在欄位\"回復高度\"輸入這個地址第一筆交易發生的區塊高度。你也可以依照 YYYY-MM-DD
         格式輸入日期。如果你不是很確定，可以輸入這個錢包地址第一次使用<em>之前</em>的區塊高度或日期。</p>
     ]]></string>
@@ -41,7 +41,7 @@
         <p>如果你只是想查看一個錢包的存入金額!</p>
         <p>請輸入不得重複的錢包名稱與錢包密碼。
         這個密碼是用來保護你在這個裝置上的錢包資料，請使用足夠強度的密碼。</p>
-        <p>在欄位\"公開地址\"中輸入你的Monero地址並填妥\"查看金鑰\"。</p>
+        <p>在欄位\"公開地址\"中輸入你的 Monero 地址並填妥\"查看金鑰\"。</p>
         <p>請在欄位\"回復高度\"輸入這個地址第一筆交易發生的區塊高度。你也可以依照 YYYY-MM-DD
         格式輸入日期。如果你不是很確定，可以輸入這個錢包地址第一次使用<em>之前</em>的區塊高度或日期。</p>
     ]]></string>
@@ -50,21 +50,21 @@
         <h1>錢包詳細資訊</h1>
         <h2>公開地址</h2>
         你的公開地址就像是銀行帳號一樣可以與他人分享而不需要擔心
-        會失去你的Monero，其他人可以透過這個地址發送Monero到你的錢包。
+        會失去你的 Monero，其他人可以透過這個地址發送 Monero 到你的錢包。
         <h2>記憶種子碼</h2>
         這是你唯一需要用來回復錢包的資訊並且可以用來取用錢包的完全權限。妥善保護好這份種子碼是相當重要的事
         情，因為它可以給予<em>任何人</em>對你的錢包操作的權限!如果你還尚未在安全的地方抄寫保存這份種子碼，請盡速進行。
         <h2>錢包檔回復密碼</h2>
         請務必抄寫下此份密碼。當你重置手機或重新安裝APP時，你將會需要用它來重新存取錢包檔。<br/>
-        <h3>CrAzYpass加密</h3>
+        <h3>CrAzYpass 加密</h3>
         若你的密碼顯示為4組的52英數字元，恭喜你!
         你的錢包檔正由256位元的金鑰所保護著，這是本裝置基於你自己設定的密碼所產生(新建或更改密碼時皆會產生)。
         如此可以大幅提高錢包檔被駭客破解的難度。<br/>
         所有新建立的錢包預設都會啟用這個加密功能。
         <h3>舊式密碼</h3>
-        如果你在此看到你的密碼，代表著你的錢包並沒有啟用CrAzYpass加密以提高安全性。
+        如果你在此看到你的密碼，代表著你的錢包並沒有啟用 CrAzYpass 加密以提高安全性。
         若要啟用，只需要在選單中點選\"更改密碼\"，在輸入新的密碼後(即使是與先前的密碼相同)，APP將會對
-        你的錢包檔進行CrAzYpass加密，請將密碼抄寫下來!
+        你的錢包檔進行 CrAzYpass 加密，請將密碼抄寫下來!
         <h3>CrAzYpass加密的錢包</h3>
         如果你需要重新安裝 Monerujo (譬如將手機重置或換了新的手機)，或是你想要將錢包檔在別的裝置或電腦上使用，你將必須
         使用錢包回復密碼才能重新存取錢包。<br/>
@@ -78,7 +78,7 @@
     <string name="help_list"><![CDATA[
         <h1>錢包列表</h1>
         <h2>節點</h2>
-        <p>Monerujo使用遠端節點連接至Monero網路而不需要下載與儲存整個區塊鏈。
+        <p>Monerujo 使用遠端節點連接至 Monero 網路而不需要下載與儲存整個區塊鏈。
         你可以在這個網站找到幾個熱門的公共遠端節點或是學習如何自行架設節點 https://moneroworld.com/</p>
         <p>Monerujo 會預設數個遠端節點可供使用。並且自動記憶最近五個使用過的節點</p>
         <h2>錢包</h2>
@@ -88,26 +88,26 @@
         <h3>詳細資訊</h3>
         <p>顯示錢包詳細資訊如種子碼 &amp; 金鑰。</p>
         <h3>接收</h3>
-        <p>產生一個QR碼以接收Monero。</p>
+        <p>產生一個QR碼以接收 Monero。</p>
         <h3>重新命名</h3>
         <p>重新命名錢包名稱，已備份的錢包不會被更改名稱</p>
         <h3>備份</h3>
         <p>建立一份錢包副本在<tt>monerujo</tt>中的<tt>backups</tt>資料夾內並覆寫上一次的備份。</p>
         <h3>封存</h3>
         <p>將建立一份備份後刪除錢包，錢包副本將會留存於<tt>backups</tt>資料夾中。
-        若你再也不需要這錢包則可利用檔案瀏覽器APP或可安全刪除檔案APP將之刪除。</p>
+        若你再也不需要這錢包則可利用檔案瀏覽器 APP 或可安全刪除檔案 APP 將之刪除。</p>
     ]]></string>
 
     <string name="help_wallet"><![CDATA[
         <h1>錢包介面</h1>
         <h2>掃描</h2>
-        由於Monero的交易是隱私保護的，因此每當你開啟Monerujo錢包時我們必須
-        在區塊鏈上掃描是否有最新的Monero被傳送到你的錢包中，將會儲存僅與你錢包相關的資訊在裝置中。
+        由於 Monero 的交易是隱私保護的，因此每當你開啟 Monerujo 錢包時我們必須
+        在區塊鏈上掃描是否有最新的 Monero 被傳送到你的錢包中，將會儲存僅與你錢包相關的資訊在裝置中。
         若你有好一段時間沒有使用錢包，那這個步驟將會花費你一些時間。
         <h2>餘額</h2>
         <p><b>救命啊! 我的錢包餘額不見了/未確認!</b><br/>
         別緊張，當你發送交易出去時，你的部分餘額可能會暫時顯示未確認。
-        這只是Monero在區塊鏈上進行找零的過程。
+        這只是 Monero 在區塊鏈上進行找零的過程。
         想了解更多關於找零的過程請參閱 https://getmonero.org/resources/moneropedia/change.html
         <h2>交易列表</h2>
         <p>錢包交易的列表。在唯讀錢包中，僅會顯示接收到的交易。</p>
@@ -116,12 +116,12 @@
     <string name="help_tx_details"><![CDATA[
         <h1>交易明細</h1>
         <h2>收款地址</h2>
-        這是你發送Monero過去的錢包地址。
+        這是你發送 Monero 過去的錢包地址。
         <h2>付款ID</h2>
         你可以使用付款ID以幫助識別雙方的款項交易。這是選填項目並且完全為隱私保護的。
         舉例來說這可以讓公司行號辨別你的這筆款項是用來支付某項購買的商品。
         <h2>交易ID</h2>
-        這是可以用來在Monero區塊鏈瀏覽器上查詢的被隱蔽交易ID。在這裡可查詢:
+        這是可以用來在 Monero 區塊鏈瀏覽器上查詢的被隱蔽交易ID。在這裡可查詢:
         <a href="https://xmrchain.net/">https://xmrchain.net/</a>
         <h2>TX KEY (交易金鑰)</h2>
         這是該筆交易的私鑰。請妥善保護這組金鑰，因為這金鑰將可揭露你該筆交易的環狀簽名
@@ -133,57 +133,57 @@
     <string name="help_send"><![CDATA[
         <h1>發送</h1>
         <h2>收款者地址</h2>
-        <p>這是你欲發送Monero過去的錢包地址。你可以從剪貼簿貼上, 掃描QR碼或是手動輸入。
+        <p>這是你欲發送 Monero 過去的錢包地址。你可以從剪貼簿貼上, 掃描QR碼或是手動輸入。
         請務必再三確認地址正確以免發送至錯誤的錢包地址</p>
-        <p>除了發送XMR，你還可透過 XMR.TO 服務來發送BTC (請至 https://xmr.to
-        了解更多)，或在下面閱讀發送BTC的說明</p>
-        <h2>付款ID</h2>
-        <p>你可以使用付款ID以幫助識別雙方的款項交易。這是選填項目並且完全為隱私保護的。
+        <p>除了發送 XMR，你還可透過 XMR.TO 服務來發送 BTC (請至 https://xmr.to
+        了解更多)，或在下面閱讀發送 BTC 的說明</p>
+        <h2>付款 ID</h2>
+        <p>你可以使用付款 ID 以幫助識別雙方的款項交易。這是選填項目並且完全為隱私保護的。
         舉例來說這可以讓公司行號辨別你的這筆款項是用來支付某項購買的商品。<p>
         <h2>Ring size</h2>
-        <p>在Monerujo中你有數種Ring size可以選擇，如果你是入門使用者我們建議你使用ring size 7。
-        增加ring size的數量可以增加環狀簽名的數量，理論上可以增加隱私保護強度(plausible deniability)。
-        但設定高ring size亦會讓你的交易網路中更為引人注意。</p>
+        <p>在 Monerujo 中你有數種 Ring size 可以選擇，如果你是入門使用者我們建議你使用 ring size 7。
+        增加 ring size 的數量可以增加環狀簽名的數量，理論上可以增加隱私保護強度(plausible deniability)。
+        但設定高 ring size 亦會讓你的交易網路中更為引人注意。</p>
         <h2>優先權</h2>
         <p>這個設定將會影響你的交易被納入區塊的速度。越高優先權的交易將會花費更多的手續費，反之亦然。
         請注意若你選擇低手續費則可能會讓你的交易等待數小時才能被納入區塊。預設優先權為\"中等\"。</p>
         <h1>發送BTC</h1>
         <h2>XMR.TO</h2>
         <p>XMR.TO 是一個可以將XMR轉換為BTC的第三方服務。
-        我們利用XMR.TO的API將其服務整合至Monerujo中。請參閱 https://xmr.to 後自行決定是否使用。
-        Monerujo開發團隊與XMR.TO並無相關，無法為你解決其服務上的問題</p>
+        我們利用XMR.TO的API將其服務整合至 Monerujo 中。請參閱 https://xmr.to 後自行決定是否使用。
+        Monerujo 開發團隊與 XMR.TO 並無相關，無法為你解決其服務上的問題</p>
         <h2>XMR.TO 匯率<h2>
         <p>在 \"金額\" 的頁面中你將看到 XMR.TO 服務的參數。包含了匯率以及BTC金額的上下限。
         請注意這個階段顯示的匯率並不是確定的。你也可以看到在多少金額之下可以直接發送BTC，而不用等待XMR的確認。
-        (詳見 XMR.TO的FAQ以了解更多)。請注意XMR.TO並不額外收取手續費用，是不是很棒呢?</p>
+        (詳見 XMR.TO 的 FAQ 以了解更多)。請注意 XMR.TO 並不額外收取手續費用，是不是很棒呢?</p>
         <h2>XMR.TO 訂單<h2>
-        <p>在 \"確認\" 的頁面中，你將可以看到正式的XMR.TO訂單。這訂單僅在一段時間內有效。
+        <p>在 \"確認\" 的頁面中，你將可以看到正式的 XMR.TO 訂單。這訂單僅在一段時間內有效。
         你可以在 \"發送\" 的按鈕上看到倒數計時。這時的匯率可能與前一個頁面顯示的不同</p>
         <h2>XMR.TO 私鑰<h2>
-        <p>由於Monerujo僅處理Monero的部分，你的XMR.TO金鑰將可用於再XMR.TO的首頁上查詢追蹤BTC部分的交易狀況。</p>
+        <p>由於 Monerujo 僅處理 Monero 的部分，你的 XMR.TO 金鑰將可用在 XMR.TO 的首頁上查詢追蹤BTC部分的交易狀況。</p>
         <p>請注意，此金鑰僅在交易發起的24小時內有效。</p>
         <h2>XMR.TO 倒數計時!</h2>
-        <p>當倒數計時歸零的時候，你將會需要回到上一步再回到\"確認\"頁面重新向XMR.TO尋求匯率報價</p>
+        <p>當倒數計時歸零的時候，你將會需要回到上一步再回到\"確認\"頁面重新向 XMR.TO 尋求匯率報價</p>
     ]]></string>
 
     <string name="help_xmrto"><![CDATA[
         <h1>發送 BTC</h1>
         <h2>XMR.TO</h2>
-        <p>XMR.TO 是一個可以將XMR轉換為BTC的第三方服務。
-        我們利用XMR.TO的API將其服務整合至Monerujo中。請參閱 https://xmr.to 後自行決定是否使用。
-        Monerujo開發團隊與XMR.TO並無相關，無法為你解決其服務上的問題</p>
+        <p>XMR.TO 是一個可以將XMR轉換為 BTC 的第三方服務。
+        我們利用 XMR.TO 的 API 將其服務整合至 Monerujo 中。請參閱 https://xmr.to 後自行決定是否使用。
+        Monerujo 開發團隊與 XMR.TO 並無相關，無法為你解決其服務上的問題</p>
         <h2>XMR.TO 匯率<h2>
-        <p>在 \"金額\" 的頁面中你將看到 XMR.TO 服務的參數。包含了匯率以及BTC金額的上下限。
-        請注意這個階段顯示的匯率並不是確定的。你也可以看到多少金額的可以進行零確認XMR的BTC發送
-        (詳見 XMR.TO的FAQ以了解更多)。請注意XMR.TO並不額外收取手續費用，是不是很棒呢?</p>
+        <p>在 \"金額\" 的頁面中你將看到 XMR.TO 服務的參數。包含了匯率以及 BTC 金額的上下限。
+        請注意這個階段顯示的匯率並不是確定的。你也可以看到多少金額的可以進行零確認 XMR 的 BTC 發送
+        (詳見 XMR.TO 的 FAQ 以了解更多)。請注意 XMR.TO 並不額外收取手續費用，是不是很棒呢?</p>
         <h2>XMR.TO 訂單<h2>
-        <p>在 \"確認\" 的頁面中，你將可以看到正式的XMR.TO訂單。這訂單僅在一段時間內有效。
+        <p>在 \"確認\" 的頁面中，你將可以看到正式的 XMR.TO 訂單。這訂單僅在一段時間內有效。
         你可以在 \"發送\" 的按鈕上看到倒數計時。這時的匯率可能與前一個頁面顯示的不同</p>
         <h2>XMR.TO 私鑰<h2>
-        <p>由於Monerujo僅處理Monero的部分，你的XMR.TO金鑰將可用於再XMR.TO的首頁上查詢追蹤BTC部分的交易狀況。</p>
+        <p>由於 Monerujo 僅處理 Monero 的部分，你的 XMR.TO 金鑰將可用在 XMR.TO 的首頁上查詢追蹤BTC部分的交易狀況。</p>
         <p>請注意，此金鑰僅在交易發起的24小時內有效。</p>
         <h2>XMR.TO 倒數計時!</h2>
-        <p>當倒數計時歸零的時候，你將會需要回到上一步再回到\"確認\"頁面重新向XMR.TO尋求匯率報價</p>
+        <p>當倒數計時歸零的時候，你將會需要回到上一步再回到\"確認\"頁面重新向 XMR.TO 尋求匯率報價</p>
     ]]></string>
 
     <string name="help_create_ledger"><![CDATA[
