Adjust the position of line break

--- a/app/src/main/res/values-zh-rTW/help.xml
+++ b/app/src/main/res/values-zh-rTW/help.xml
@@ -8,8 +8,7 @@
         <h2>請抄寫你的記憶種子碼！</h2>
         <p>在下一個步驟將會顯示你的 25 字「記憶種子碼」。
         這是你在未來想回復錢包並且取得完整權限時所需的唯一資訊。
-        妥善保護好這份種子碼是相當重要的事情，因為它可以給予<em>任何人</em>
-        對你的錢包操作的權限！</p>
+        妥善保護好這份種子碼是相當重要的事情，因為它可以給予<em>任何人</em>對你的錢包操作的權限！</p>
         <p>如果你忘記錢包密碼，你依然能夠使用記憶種子碼來回復你的錢包。</p>
         <p>沒有任何方法能夠恢復你的記憶種子碼，如果你弄丟了種子碼將會失去你的所有資金！
         記憶種子碼是無法更改的，若種子碼被竊取或洩漏，你將必須立刻將資金轉移到新的錢包中 (將會是新的一份種子碼)。
@@ -49,11 +48,10 @@
     <string name="help_details"><![CDATA[
         <h1>錢包詳細資訊</h1>
         <h2>公開地址</h2>
-        你的公開地址就像是銀行帳號一樣可以與他人分享而不需要擔心
-        會失去你的 Monero，其他人可以透過這個地址發送 Monero 到你的錢包。
+        你的公開地址就像是銀行帳號一樣可以與他人分享而不需要擔心會失去你的
+        Monero，其他人可以透過這個地址發送 Monero 到你的錢包。
         <h2>記憶種子碼</h2>
-        這是你唯一需要用來回復錢包的資訊並且可以用來取用錢包的完全權限。妥善保護好這份種子碼是相當重要的事
-        情，因為它可以給予<em>任何人</em>對你的錢包操作的權限！如果你還尚未在安全的地方抄寫保存這份種子碼，請盡速進行。
+        這是你唯一需要用來回復錢包的資訊並且可以用來取用錢包的完全權限。妥善保護好這份種子碼是相當重要的事情，因為它可以給予<em>任何人</em>對你的錢包操作的權限！如果你還尚未在安全的地方抄寫保存這份種子碼，請盡速進行。
         <h2>錢包檔回復密碼</h2>
         請務必抄寫下此份密碼。當你重置手機或重新安裝 App 時，你將會需要用它來重新存取錢包檔。<br/>
         <h3>CrAzYpass 加密</h3>
@@ -63,11 +61,10 @@
         所有新建立的錢包預設都會啟用這個加密功能。
         <h3>舊式密碼</h3>
         如果你在此看到你的密碼，代表著你的錢包並沒有啟用 CrAzYpass 加密以提高安全性。
-        若要啟用，只需要在選單中點選「更改密碼」，在輸入新的密碼後 (即使是與先前的密碼相同)，App 將會對
-        你的錢包檔進行 CrAzYpass 加密，請將密碼抄寫下來！
+        若要啟用，只需要在選單中點選「更改密碼」，在輸入新的密碼後 (即使是與先前的密碼相同)，App
+        將會對你的錢包檔進行 CrAzYpass 加密，請將密碼抄寫下來！
         <h3>CrAzYpass 加密的錢包</h3>
-        如果你需要重新安裝 Monerujo (譬如將手機重置或換了新的手機)，或是你想要將錢包檔在別的裝置或電腦上使用，你將必須
-        使用錢包回復密碼才能重新存取錢包。<br/>
+        如果你需要重新安裝 Monerujo (譬如將手機重置或換了新的手機)，或是你想要將錢包檔在別的裝置或電腦上使用，你將必須使用錢包回復密碼才能重新存取錢包。<br/>
         當你在選單中點選「更改密碼」時，可以更換新的密碼，但是請注意這同時會產生一組新的錢包回復密碼，請抄寫下來！
         <h2>查看金鑰</h2>
         查看金鑰可以被用在查看錢包的入帳金額而不包含花費錢包資金的權限。
@@ -90,7 +87,7 @@
         <h3>接收</h3>
         <p>產生一個 QR 碼以接收 Monero。</p>
         <h3>重新命名</h3>
-        <p>重新命名錢包名稱，已備份的錢包不會被更改名稱</p>
+        <p>重新命名錢包名稱，已備份的錢包不會被更改名稱。</p>
         <h3>備份</h3>
         <p>建立一份錢包副本在 <tt>monerujo</tt> 中的 <tt>backups</tt> 資料夾內並覆寫上一次的備份。</p>
         <h3>封存</h3>
@@ -101,8 +98,8 @@
     <string name="help_wallet"><![CDATA[
         <h1>錢包介面</h1>
         <h2>掃描</h2>
-        由於 Monero 的交易是隱私保護的，因此每當你開啟 Monerujo 錢包時我們必須
-        在區塊鏈上掃描是否有最新的 Monero 被傳送到你的錢包中，這將會儲存僅與你錢包相關的資訊在裝置中。
+        由於 Monero 的交易是隱私保護的，因此每當你開啟 Monerujo
+        錢包時我們必須在區塊鏈上掃描是否有最新的 Monero 被傳送到你的錢包中，這將會儲存僅與你錢包相關的資訊在裝置中。
         若你有好一段時間沒有使用錢包，那這個步驟將會花費你一些時間。
         <h2>餘額</h2>
         <p><b>救命啊！我的錢包餘額不見了/未確認！</b><br/>
@@ -121,11 +118,10 @@
         你可以使用付款 ID 以幫助識別雙方的款項交易。這是選填項目並且完全為隱私保護的。
         舉例來說這可以讓公司行號辨別你的這筆款項是用來支付某項購買的商品。
         <h2>交易 ID</h2>
-        這是可以用來在 Monero 區塊鏈瀏覽器上查詢的被隱蔽交易 ID。在這裡可查詢：
-        <a href="https://xmrchain.net/">https://xmrchain.net/</a>
+        這是可以用來在 Monero 區塊鏈瀏覽器上查詢的被隱蔽交易 ID。
+        在這裡可查詢：<a href="https://xmrchain.net/">https://xmrchain.net/</a>
         <h2>TX KEY (交易金鑰)</h2>
-        這是該筆交易的私鑰。請妥善保護這組金鑰，因為這金鑰將可揭露你該筆交易的環狀簽名
-        而使得該筆交易透明化。
+        這是該筆交易的私鑰。請妥善保護這組金鑰，因為這金鑰將可揭露你該筆交易的環狀簽名而使得該筆交易透明化。
         <h2>區塊</h2>
         這是包裹該筆交易的區塊編號。
     ]]></string>
