--- a/app/src/main/res/values-sk/about.xml
+++ b/app/src/main/res/values-sk/about.xml
@@ -5,7 +5,7 @@
     <string name="about_version">Verzia %1$s (%2$d)</string>
 
     <string name="credits_text"><![CDATA[
-        <b>Credits</b>
+        <b>Zásluhy</b>
         <br/>
         m2049r, baltsar777, anhdres, keejef,
         rehrar, EarlOfEgo et al.
