--- a/app/src/main/res/values-sk/about.xml
+++ b/app/src/main/res/values-sk/about.xml
@@ -18,7 +18,7 @@
         <p>Na tejto stránke nájdete informácie o zásadách ochrany v súvislosti so zbieraním a spracovávaním osobných údajov, 
 		ktoré získame od užívateľov našej apky (monerujo: Monero Wallet).
         </p>
-        <p>POužívaním tejto aplikácie súhlasíš so zbieraním a spracovávaním informácií v súlade s týmito pravidlami.
+        <p>Používaním tejto aplikácie súhlasíš so zbieraním a spracovávaním informácií v súlade s týmito pravidlami.
 		</p>
         <h2>Zbierané Dáta</h2>
         <p>Osobné dáta sú také dáta, na základe ktorých by bolo možné identifikovať jedinca.</p>
