--- a/app/src/main/res/layout/fragment_receive.xml
+++ b/app/src/main/res/layout/fragment_receive.xml
@@ -89,46 +89,21 @@
             android:layout_marginTop="16dp"
             android:orientation="vertical" />
 
-        <LinearLayout
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/etNotes"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="10">
+            android:layout_height="wrap_content">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/etPaymentId"
-                android:layout_width="0dp"
+            <EditText
+                style="@style/MoneroEdit"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="10"
-                app:counterEnabled="true"
-                app:counterMaxLength="16"
-                app:errorEnabled="true">
+                android:hint="@string/receive_desc_hint"
+                android:imeOptions="actionDone"
+                android:inputType="textMultiLine"
+                android:textAlignment="textStart" />
 
-                <android.support.design.widget.TextInputEditText
-                    style="@style/MoneroEdit"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/moneroGray"
-                    android:hint="@string/receive_paymentid_hint"
-                    android:imeOptions="actionDone"
-                    android:inputType="textMultiLine"
-                    android:textAlignment="textStart" />
-
-            </android.support.design.widget.TextInputLayout>
-
-            <Button
-                android:id="@+id/bPaymentId"
-                style="@style/MoneroText.Button.Small"
-                android:layout_width="56dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="0"
-                android:background="?android:attr/selectableItemBackgroundBorderless"
-                android:drawableTop="@drawable/ic_settings_orange_24dp"
-                android:text="@string/send_generate_paymentid_hint"
-                android:textColor="@color/moneroGray"
-                android:visibility="visible" />
-        </LinearLayout>
+        </android.support.design.widget.TextInputLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -175,9 +150,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                android:gravity="center"
                 android:drawablePadding="8dp"
                 android:drawableStart="@drawable/ic_nfc_black_24dp"
+                android:gravity="center"
                 android:text="@string/nfc_tag_tap"
                 android:visibility="visible" />
         </RelativeLayout>
