--- a/app/src/main/res/values-ar/about.xml
+++ b/app/src/main/res/values-ar/about.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="about_close">Close</string>
-    <string name="about_whoami">I am monerujo</string>
-    <string name="about_version">Version %1$s (%2$d)</string>
+    <string name="about_close">إغلاق</string>
+    <string name="about_whoami">أنا monerujo</string>
+    <string name="about_version">الإصدار %1$s (%2$d)</string>
 
     <string name="credits_text"><![CDATA[
         <b>Credits</b>
