--- a/app/src/main/res/values-ru/help.xml
+++ b/app/src/main/res/values-ru/help.xml
@@ -4,7 +4,7 @@
         <h1>Создать кошелёк — Новый</h1>
         <p>Если вам нужен новый адрес Monero!</p>
         <p>Введите уникальное имя и пароль кошелька.
-        Пароль используется для защиты данных вашего кошелька на устройстве.
+        Пароль используется для защиты данных вашего кошелька на Android устройстве.
 	Необходимо использовать надёжный пароль. Лучше даже использовать фразу-пароль.</p>
         <h2>Запишите вашу мнемоническую фразу!</h2>
         <p>Следующий экран будет содержать вашу \"Мнемоническую фразу\", состоящую из 25 слов.
@@ -247,7 +247,7 @@
         <p>Необходимо ввести уникальные имя и пароль кошелька. Пароль используется для защиты данных вашего
         кошелька на устройстве. Необходимо использовать надёжный пароль. Лучше даже использовать фразу-пароль.</p>
         <p>Если вам известен номер блока первой транзакции, который использовался с этим адресом, следует
-        ввести его в поле \"Восстановить высоту\". Если не заполните это поле, то будет просканирован <em>весь</em> блокчейн,
-        чтобы найти транзакции, принадлежащие к вашему адресу, а это займёт <em>много</em> времени.</p>
+        ввести его в поле \"Восстановить высоту\". Вы также можете использовать дату в формате YYYY-MM-DD.
+ 	Если вы не уверены, введите приблизительную дату/высоту блока <em>до</em> того как вы впервые использовали этот кошелек.</p>
     ]]></string>
 </resources>
