Update for Russian translation #370 (#422)
* Update for Russian translation
- strings.xml
- help.xml

--- a/app/src/main/res/values-ru/help.xml
+++ b/app/src/main/res/values-ru/help.xml
@@ -4,7 +4,7 @@
         <h1>Создать кошелёк — Новый</h1>
         <p>Если вам нужен новый адрес Monero!</p>
         <p>Введите уникальное имя и пароль кошелька.
-        Пароль используется для защиты данных вашего кошелька на устройстве.
+        Пароль используется для защиты данных вашего кошелька на Android устройстве.
 	Необходимо использовать надёжный пароль. Лучше даже использовать фразу-пароль.</p>
         <h2>Запишите вашу мнемоническую фразу!</h2>
         <p>Следующий экран будет содержать вашу \"Мнемоническую фразу\", состоящую из 25 слов.
@@ -240,14 +240,14 @@
     ]]></string>
 
     <string name="help_create_ledger"><![CDATA[
-        <h1>Create Wallet - Ledger</h1>
-        <p>You want to recover your wallet from your Ledger Nano S device.</p>
-        <p>Your secret keys never leave the Ledger device, so you need it plugged in every
-        time you want to access your wallet.</p>
-        <p>Enter a unique wallet name and password. The password is used for securing your wallet data on the Android
-        device. Use a strong password - even better use a passphrase.</p>
-        <p>Enter the block number of the first transaction used for this address in the
-        field \"Restore Height\". You can also use a date in the format YYYY-MM-DD. If you are not sure,
-        enter an approximate date/blockheight <em>before</em> you first used this wallet address.</p>
+        <h1>Создать Ledger кошелек</h1>
+        <p>Вы хотите восстановить свой кошелек из Ledger Nano S.</p>
+        <p>Ваши секретные ключи никогда не покидают пределы устройства Ledger. Вам необходимо подключать
+        устройство каждый раз, когда вы хотите получить доступ к своему кошельку.</p>
+        <p>Необходимо ввести уникальные имя и пароль кошелька. Пароль используется для защиты данных вашего
+        кошелька на устройстве. Необходимо использовать надёжный пароль. Лучше даже использовать фразу-пароль.</p>
+        <p>Если вам известен номер блока первой транзакции, который использовался с этим адресом, следует
+        ввести его в поле \"Восстановить высоту\". Вы также можете использовать дату в формате YYYY-MM-DD.
+ 	Если вы не уверены, введите приблизительную дату/высоту блока <em>до</em> того как вы впервые использовали этот кошелек.</p>
     ]]></string>
 </resources>
